[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/OAnQuan/resume.png" type="Texture" id=1]
[ext_resource path="res://Assets/OAnQuan/resume_hover.png" type="Texture" id=2]
[ext_resource path="res://Assets/OAnQuan/restart.png" type="Texture" id=3]
[ext_resource path="res://Assets/OAnQuan/restart_hover.png" type="Texture" id=4]
[ext_resource path="res://Assets/OAnQuan/exit.png" type="Texture" id=5]
[ext_resource path="res://Assets/OAnQuan/exit_hover.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=7]
[ext_resource path="res://Fonts/baloo/Baloo-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.179688, 0.171967, 0.171967, 0.588235 )

[sub_resource type="DynamicFont" id=1]
size = 90
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 8 )

[node name="Menu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -171.0
margin_top = -208.5
margin_right = 171.0
margin_bottom = 208.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
alignment = 1

[node name="Text" type="Label" parent="VBoxContainer"]
margin_left = 7.0
margin_right = 334.0
margin_bottom = 143.0
grow_horizontal = 2
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1
valign = 1

[node name="Resume" type="TextureButton" parent="VBoxContainer"]
margin_left = 20.0
margin_top = 147.0
margin_right = 321.0
margin_bottom = 248.0
grow_horizontal = 2
rect_min_size = Vector2( 300, 100 )
size_flags_horizontal = 4
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 2 )

[node name="Restart" type="TextureButton" parent="VBoxContainer"]
margin_left = 20.0
margin_top = 252.0
margin_right = 321.0
margin_bottom = 353.0
grow_horizontal = 2
rect_min_size = Vector2( 300, 100 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Exit" type="TextureButton" parent="VBoxContainer"]
margin_left = 20.0
margin_top = 357.0
margin_right = 321.0
margin_bottom = 458.0
grow_horizontal = 2
rect_min_size = Vector2( 300, 100 )
size_flags_horizontal = 4
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
